# coh3

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
beoh/: Makefile.am  Makefile.in  asympt.cpp  beoh.cpp  beoh.h  beohbeta.h  beohdataread.cpp  beohdummy.cpp  beohensdf.cpp  beohffrag.cpp  beohffrag.h  beohffragbeta.cpp  beohffragcalc.cpp  beohffragdecay.cpp  beohffragenergy.cpp  beohlabspectrum.cpp  beohmain.cpp  beohneutrino.cpp  beohomcalc.cpp  beohoutput.cpp  beohoutput.h  beohpopinit.cpp  beohprofile.cpp  beohsetup.cpp  beohspecmc.cpp  beohspectra.cpp  beohstat.h  beta2.cpp  betachain.h  builtin.cpp  coulomb.cpp  coupling.cpp  datatable.cpp  etc.cpp  extwave.cpp  ffp.h  ffpmultichance.cpp  ffpmultichance.h  ffpoutput.cpp  ffpparameter.cpp  (+34 more)
document/: compound.html  custom.html  direct.html  example.html  index.html  input.html  install.html  introduction.html  optical.html  option.html  output.html  structure.html  style.css  tweak.html  usage.html
mfld/: FRDMpairing.cpp  FRDMpotential.cpp  FRDMprint.cpp  FRDMreadshape.cpp  FRDMshape.cpp  FRDMshell.cpp  FRDMsolvebcs.cpp  HFdensity.cpp  HObasis.cpp  HOhamiltonian.cpp  HOpolynomial.cpp  HOsorteigenvalue.cpp  Makefile  Makefile.am  Makefile.in  coupling.cpp  eispack.cpp  mfld.cpp  mfld.h  mfldFRDM.cpp  mflddataread.cpp  mfldphconfig.cpp  mfldprint.cpp  mfldsd.cpp  mt19937.cpp  polycalc.cpp
omplib/: Makefile.am  Makefile.in  an.cpp  avrigeanu.cpp  becchetti.cpp  bojowald.cpp  bound.cpp  ch89.cpp  dave1p.cpp  flap.cpp  han.cpp  koning.cpp  kunieda.cpp  lemos.cpp  madland.cpp  nolte.cpp  omplib.h  perey.cpp  rapaport.cpp  scratch.cpp  smith.cpp  soukhovitskii.cpp  spline.cpp  talys_alpha.cpp  test.cpp  userdef.cpp  walter.cpp  wilmore.cpp  wlh.cpp  young.cpp
source/: FRDM.h  FRDMcoordinate.h  FRDMfileout.cpp  FRDMmacroenergy.cpp  FRDMmacrointegral.cpp  FRDMmacroshapedepend.cpp  FRDMmain.cpp  FRDMmicroenergy.cpp  FRDMpairing.cpp  FRDMpotential.cpp  FRDMprint.cpp  FRDMreadshape.cpp  FRDMshape.cpp  FRDMshell.cpp  FRDMsolvebcs.cpp  FRDMzeroenergy.cpp  HF.h  HFcoulomb.cpp  HFdensity.cpp  HFenergy.cpp  HFinterface.h  HFmain.cpp  HFmultipole.cpp  HFpotential.cpp  HFprint.cpp  HFsolvebcs.cpp  HObasis.cpp  HObasis.h  HOhamiltonian.cpp  HOpolynomial.cpp  HOsorteigenvalue.cpp  MFT.h  MFTmain.cpp  Makefile.am  Makefile.in  amplitud.cpp  bcs.cpp  beta2.cpp  beta2.h  betaexpansion.cpp  (+126 more)
