EXTRA_DIST = example/*.dat document/*.html document/style.css document/cohlogo.jpg
SUBDIRS = omplib source beoh
cohdir = $(datarootdir)/coh
bohdir = $(datarootdir)/beoh
nobase_coh_DATA = kcksyst.dat fisbar.dat nucshape.dat decaybranchENDF.dat decaybranchJENDL.dat\
	levels/z000.dat levels/z001.dat levels/z002.dat levels/z003.dat levels/z004.dat \
	levels/z005.dat levels/z006.dat levels/z007.dat levels/z008.dat levels/z009.dat \
	levels/z010.dat levels/z011.dat levels/z012.dat levels/z013.dat levels/z014.dat \
	levels/z015.dat levels/z016.dat levels/z017.dat levels/z018.dat levels/z019.dat \
	levels/z020.dat levels/z021.dat levels/z022.dat levels/z023.dat levels/z024.dat \
	levels/z025.dat levels/z026.dat levels/z027.dat levels/z028.dat levels/z029.dat \
	levels/z030.dat levels/z031.dat levels/z032.dat levels/z033.dat levels/z034.dat \
	levels/z035.dat levels/z036.dat levels/z037.dat levels/z038.dat levels/z039.dat \
	levels/z040.dat levels/z041.dat levels/z042.dat levels/z043.dat levels/z044.dat \
	levels/z045.dat levels/z046.dat levels/z047.dat levels/z048.dat levels/z049.dat \
	levels/z050.dat levels/z051.dat levels/z052.dat levels/z053.dat levels/z054.dat \
	levels/z055.dat levels/z056.dat levels/z057.dat levels/z058.dat levels/z059.dat \
	levels/z060.dat levels/z061.dat levels/z062.dat levels/z063.dat levels/z064.dat \
	levels/z065.dat levels/z066.dat levels/z067.dat levels/z068.dat levels/z069.dat \
	levels/z070.dat levels/z071.dat levels/z072.dat levels/z073.dat levels/z074.dat \
	levels/z075.dat levels/z076.dat levels/z077.dat levels/z078.dat levels/z079.dat \
	levels/z080.dat levels/z081.dat levels/z082.dat levels/z083.dat levels/z084.dat \
	levels/z085.dat levels/z086.dat levels/z087.dat levels/z088.dat levels/z089.dat \
	levels/z090.dat levels/z091.dat levels/z092.dat levels/z093.dat levels/z094.dat \
	levels/z095.dat levels/z096.dat levels/z097.dat levels/z098.dat levels/z099.dat \
	levels/z100.dat levels/z101.dat levels/z102.dat levels/z103.dat levels/z104.dat \
	levels/z105.dat levels/z106.dat levels/z107.dat levels/z108.dat levels/z109.dat \
	levels/z110.dat levels/z111.dat levels/z112.dat levels/z113.dat levels/z114.dat \
	levels/z115.dat levels/z116.dat levels/z117.dat levels/z118.dat levels/z119.dat \
        levels/z120.dat levels/z121.dat levels/z122.dat levels/z123.dat levels/z124.dat \
        levels/z125.dat levels/z126.dat levels/z127.dat levels/z128.dat levels/z129.dat \
        levels/z130.dat levels/z131.dat levels/z132.dat levels/z133.dat levels/z134.dat \
        levels/z135.dat levels/z136.dat levels/z137.dat levels/z138.dat levels/z139.dat \
        levels/z140.dat \
	levels/levels-readme.html levels/levels.html

nobase_dist_pkgdata_DATA = $(nobase_coh_DATA)
