bin_PROGRAMS = coh
coh_LDADD = ../omplib/libomp.a
coh_SOURCES = \
	MFTmain.cpp \
	FRDMfileout.cpp \
	FRDMmain.cpp \
	FRDMmacroenergy.cpp \
	FRDMmacrointegral.cpp \
	FRDMmacroshapedepend.cpp \
	FRDMmicroenergy.cpp \
	FRDMpairing.cpp \
	FRDMpotential.cpp \
	FRDMprint.cpp \
	FRDMreadshape.cpp \
	FRDMshape.cpp \
	FRDMshell.cpp \
	FRDMsolvebcs.cpp \
	FRDMzeroenergy.cpp \
	HObasis.cpp \
	HOhamiltonian.cpp \
	HOpolynomial.cpp \
	HOsorteigenvalue.cpp \
	HFcoulomb.cpp \
	HFdensity.cpp \
	HFenergy.cpp \
	HFmain.cpp \
	HFmultipole.cpp \
	HFprint.cpp \
	HFpotential.cpp \
	HFsolvebcs.cpp \
	bcs.cpp \
	beta2.cpp \
	betaexpansion.cpp \
	bstatsolve.cpp \
	bstatwav.cpp \
	coh.cpp \
	cohmain.cpp \
	coulomb.cpp \
	dataread.cpp \
	datatable.cpp \
	dsd.cpp \
	dsdoverlap.cpp \
	eclddx.cpp \
	eclipse.cpp \
	eclmc.cpp \
	ecloutput.cpp \
	eclspectra.cpp \
	eispack.cpp \
	exciton.cpp \
	excitransf.cpp \
	excilambda.cpp \
	exciparm.cpp \
	excipop.cpp \
	fileout.cpp \
	fisbar.cpp \
	fisdens.cpp \
	fispop.cpp \
	fns.cpp \
	fnscalc.cpp \
	fnsprefis.cpp \
	fnssystematics.cpp \
	fpotential.cpp \
	gampop.cpp \
	gamcas.cpp \
	gdr.cpp \
	gtrans.cpp \
	gtransread.cpp \
	knockout.cpp \
	levden.cpp \
	macs.cpp \
	moldauer.cpp \
	nilsson.cpp \
	outprep.cpp \
	output.cpp \
	outext.cpp \
	parleg.cpp \
	parpop.cpp \
	photoabs.cpp \
	polysq.cpp \
	polycalc.cpp \
	popinit.cpp \
	setup.cpp \
	setupinit.cpp \
	skyrmeparameter.cpp \
	spectra.cpp \
	stataveragespace.cpp \
	statdirect.cpp \
	statmaniplevel.cpp \
	statmodel.cpp \
	statmodeltools.cpp \
	statcompounddecay.cpp \
	statdecay.cpp \
	statlevdecay.cpp \
	statparm.cpp \
	statreaddensity.cpp \
	statskiplevel.cpp \
	stattrans.cpp \
	amplitud.cpp \
	asympt.cpp \
	builtin.cpp \
	ccamp.cpp \
	cccalc.cpp \
	ccfunction.cpp \
	ccsetform.cpp \
	dwcalc.cpp \
	extwave.cpp \
	intwave.cpp \
	omcalc.cpp \
	omoutput.cpp \
	omsetform.cpp \
	omsetparm.cpp \
	smatrix.cpp \
	strength.cpp \
	coupling.cpp \
	etc.cpp \
	kcksyst.cpp \
	masstable.cpp \
	ripl2levels.cpp \
	spline.cpp \
	parameter.cpp \
	MFT.h \
	HFinterface.h \
	HF.h \
	HObasis.h \
	FRDM.h \
	FRDMcoordinate.h \
	beta2.h \
	coh.h \
	cohegrid.h \
	constant.h \
	coulomb.h \
	coupling.h \
	datatable.h \
	dir.h \
	dsd.h \
	eclipse.h \
	eispack.h \
	elements.h \
	etc.h \
	exciton.h \
	ewtrans.h \
	fileout.h \
	fisbar.h \
	fns.h \
	fnssystematics.h \
	gauss.h \
	gdr.h \
	global.h \
	kcksyst.h \
	levden.h \
	macs.h \
	masstable.h \
	masstable_audi2012_frdm2012.h \
	metastable.h \
	nucleus.h \
	omcalc.h \
	omoutput.h \
	optical.h \
	outformat.h \
	outprep.h \
	output.h \
	outbanner.h \
	outext.h \
	polysq.h \
	physicalconstant.h \
	ripl2levels.h \
	setupinit.h \
	statmodel.h \
	structur.h \
	terminate.h \
	spline.h \
	parameter.h \
	mt19937.h \
	mt19937.cpp

AM_CXXFLAGS = \
	-g -Wall -Wextra -DDATADIR=\"${pkgdatadir}\"
